--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.6)
 project(PyCOLMAP)
 
+cmake_policy(SET CMP0146 OLD)
 find_package(COLMAP REQUIRED)
 include_directories(${COLMAP_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR})
 link_directories(${COLMAP_LINK_DIRS})
